// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IntentsFeedback /> First curation should confirm all active intents otherwise 1`] = `
Array [
  Array [
    "/api/tickets/0/messages/1/intents/",
    Object {
      "active_intents": Array [
        "foo/intent",
      ],
    },
  ],
]
`;

exports[`<IntentsFeedback /> First curation should confirm all intents except the one that has been rejected if one intent is rejected 1`] = `
Array [
  Array [
    "/api/tickets/0/messages/1/intents/",
    Object {
      "active_intents": Array [
        "bar/intent",
        "baz/intent",
      ],
    },
  ],
]
`;

exports[`<IntentsFeedback /> First curation should confirm only the confirmed intent if none was rejected 1`] = `
Array [
  Array [
    "/api/tickets/0/messages/1/intents/",
    Object {
      "active_intents": Array [
        "foo/intent",
      ],
    },
  ],
]
`;

exports[`<IntentsFeedback /> First curation should display a confirmed icon on confirm 1`] = `
<div
  class="wrapper"
>
  <div
    id="intent-tooltip-1"
  />
  <div
    class="dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="toggleMenu btn btn-secondary"
      type="button"
    >
      <span
        class="mr-1 menuLabel"
      >
        3 intents detected
      </span>
      <span
        class="caret material-icons"
      >
        arrow_drop_down
      </span>
    </button>
    <div
      aria-hidden="true"
      class="menu dropdown-menu dropdown-menu-right"
      role="menu"
      tabindex="-1"
    >
      <div
        class="header"
      >
        Message intents
        <i
          class="material-icons ml-2 info"
          id="intent-info-1"
        >
          info_outline
        </i>
      </div>
      <div
        class="options"
      >
        <h6
          class="subheader dropdown-header"
          tabindex="-1"
        >
          3 intents detected
        </h6>
        <div
          class="dropdownItemWrapper"
        >
          <div
            class="dropdownItemLabel"
          >
            <span
              class="info"
            >
              <i
                class="material-icons mr-2 confirmedInfo"
                id="foo-intent-1-info"
              >
                check_circle_outline
              </i>
            </span>
            <span
              class="action"
            >
              <span
                class="dropdownButton"
              >
                <i
                  class="reject icon material-icons"
                >
                  close
                </i>
              </span>
            </span>
            <span
              class="label"
            >
              Foo/intent
            </span>
          </div>
          <div
            class="description"
            title="foo intent description"
          >
            foo intent description
          </div>
        </div>
        <div
          class="dropdownItemWrapper"
        >
          <div
            class="dropdownItemLabel"
          >
            <span
              class="info"
            />
            <span
              class="action"
            >
              <span
                class="dropdownButton"
              >
                <i
                  class="confirm icon material-icons"
                >
                  done
                </i>
              </span>
              <span
                class="dropdownButton"
              >
                <i
                  class="reject icon material-icons"
                >
                  close
                </i>
              </span>
            </span>
            <span
              class="label"
            >
              Bar/intent
            </span>
          </div>
          <div
            class="description"
            title="bar intent description"
          >
            bar intent description
          </div>
        </div>
        <div
          class="dropdownItemWrapper"
        >
          <div
            class="dropdownItemLabel"
          >
            <span
              class="info"
            />
            <span
              class="action"
            >
              <span
                class="dropdownButton"
              >
                <i
                  class="confirm icon material-icons"
                >
                  done
                </i>
              </span>
              <span
                class="dropdownButton"
              >
                <i
                  class="reject icon material-icons"
                >
                  close
                </i>
              </span>
            </span>
            <span
              class="label"
            >
              Baz/intent
            </span>
          </div>
          <div
            class="description"
            title="baz intent description"
          >
            baz intent description
          </div>
        </div>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <h6
          class="subheader dropdown-header"
          tabindex="-1"
        >
          Other intents
        </h6>
        <div
          class="dropdownItemWrapper disabled hoverable"
        >
          <div
            class="dropdownItemLabel"
          >
            <span
              class="info"
            />
            <span
              class="action"
            >
              <span
                class="dropdownButton"
                id="add-other-intent-1"
              >
                <i
                  class="icon material-icons"
                >
                  add
                </i>
              </span>
            </span>
            <span
              class="label"
            >
              Other/intent
            </span>
          </div>
          <div
            class="description"
            title="other intent description"
          >
            other intent description
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<IntentsFeedback /> First curation should render active and available intents with a confirmation button 1`] = `
<div
  class="wrapper"
>
  <div
    id="intent-tooltip-1"
  />
  <div
    class="dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="toggleMenu btn btn-secondary"
      type="button"
    >
      <span
        class="mr-1 menuLabel"
      >
        3 intents detected
      </span>
      <span
        class="caret material-icons"
      >
        arrow_drop_down
      </span>
    </button>
    <div
      aria-hidden="true"
      class="menu dropdown-menu dropdown-menu-right"
      role="menu"
      tabindex="-1"
    >
      <div
        class="header"
      >
        Message intents
        <i
          class="material-icons ml-2 info"
          id="intent-info-1"
        >
          info_outline
        </i>
      </div>
      <div
        class="options"
      >
        <h6
          class="subheader dropdown-header"
          tabindex="-1"
        >
          3 intents detected
        </h6>
        <div
          class="dropdownItemWrapper"
        >
          <div
            class="dropdownItemLabel"
          >
            <span
              class="info"
            />
            <span
              class="action"
            >
              <span
                class="dropdownButton"
              >
                <i
                  class="confirm icon material-icons"
                >
                  done
                </i>
              </span>
              <span
                class="dropdownButton"
              >
                <i
                  class="reject icon material-icons"
                >
                  close
                </i>
              </span>
            </span>
            <span
              class="label"
            >
              Foo/intent
            </span>
          </div>
          <div
            class="description"
            title="foo intent description"
          >
            foo intent description
          </div>
        </div>
        <div
          class="dropdownItemWrapper"
        >
          <div
            class="dropdownItemLabel"
          >
            <span
              class="info"
            />
            <span
              class="action"
            >
              <span
                class="dropdownButton"
              >
                <i
                  class="confirm icon material-icons"
                >
                  done
                </i>
              </span>
              <span
                class="dropdownButton"
              >
                <i
                  class="reject icon material-icons"
                >
                  close
                </i>
              </span>
            </span>
            <span
              class="label"
            >
              Bar/intent
            </span>
          </div>
          <div
            class="description"
            title="bar intent description"
          >
            bar intent description
          </div>
        </div>
        <div
          class="dropdownItemWrapper"
        >
          <div
            class="dropdownItemLabel"
          >
            <span
              class="info"
            />
            <span
              class="action"
            >
              <span
                class="dropdownButton"
              >
                <i
                  class="confirm icon material-icons"
                >
                  done
                </i>
              </span>
              <span
                class="dropdownButton"
              >
                <i
                  class="reject icon material-icons"
                >
                  close
                </i>
              </span>
            </span>
            <span
              class="label"
            >
              Baz/intent
            </span>
          </div>
          <div
            class="description"
            title="baz intent description"
          >
            baz intent description
          </div>
        </div>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <h6
          class="subheader dropdown-header"
          tabindex="-1"
        >
          Other intents
        </h6>
        <div
          class="dropdownItemWrapper disabled hoverable"
        >
          <div
            class="dropdownItemLabel"
          >
            <span
              class="info"
            />
            <span
              class="action"
            >
              <span
                class="dropdownButton"
                id="add-other-intent-1"
              >
                <i
                  class="icon material-icons"
                >
                  add
                </i>
              </span>
            </span>
            <span
              class="label"
            >
              Other/intent
            </span>
          </div>
          <div
            class="description"
            title="other intent description"
          >
            other intent description
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<IntentsFeedback /> Further curation should add an intent on click add 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      id="intent-tooltip-1"
    />
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="toggleMenu btn btn-secondary"
        type="button"
      >
        <span
          class="mr-1 menuLabel"
        >
          2 intents detected
        </span>
        <span
          class="caret material-icons"
        >
          arrow_drop_down
        </span>
      </button>
      <div
        aria-hidden="true"
        class="menu dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <div
          class="header"
        >
          Message intents
          <i
            class="material-icons ml-2 info"
            id="intent-info-1"
          >
            info_outline
          </i>
        </div>
        <div
          class="options"
        >
          <h6
            class="subheader dropdown-header"
            tabindex="-1"
          >
            2 intents detected
          </h6>
          <div
            class="dropdownItemWrapper"
          >
            <div
              class="dropdownItemLabel"
            >
              <span
                class="info"
              >
                <i
                  class="material-icons mr-2 confirmedInfo"
                  id="bar-intent-1-info"
                >
                  check_circle_outline
                </i>
              </span>
              <span
                class="action"
              >
                <span
                  class="dropdownButton"
                >
                  <i
                    class="reject icon material-icons"
                  >
                    close
                  </i>
                </span>
              </span>
              <span
                class="label"
              >
                Bar/intent
              </span>
            </div>
            <div
              class="description"
              title="bar intent description"
            >
              bar intent description
            </div>
          </div>
          <div
            class="dropdownItemWrapper"
          >
            <div
              class="dropdownItemLabel"
            >
              <span
                class="info"
              >
                <i
                  class="material-icons mr-2 confirmedInfo"
                  id="foo-intent-1-info"
                >
                  check_circle_outline
                </i>
              </span>
              <span
                class="action"
              >
                <span
                  class="dropdownButton"
                >
                  <i
                    class="reject icon material-icons"
                  >
                    close
                  </i>
                </span>
              </span>
              <span
                class="label"
              >
                Foo/intent
              </span>
            </div>
            <div
              class="description"
              title="foo intent description"
            >
              foo intent description
            </div>
          </div>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <h6
            class="subheader dropdown-header"
            tabindex="-1"
          >
            Other intents
          </h6>
          <div
            class="dropdownItemWrapper hoverable"
          >
            <div
              class="dropdownItemLabel"
            >
              <span
                class="info"
              />
              <span
                class="action"
              >
                <span
                  class="dropdownButton"
                  id="add-baz-intent-1"
                >
                  <i
                    class="icon material-icons"
                  >
                    add
                  </i>
                </span>
              </span>
              <span
                class="label"
              >
                Baz/intent
              </span>
            </div>
            <div
              class="description"
              title="baz intent description"
            >
              baz intent description
            </div>
          </div>
          <div
            class="dropdownItemWrapper hoverable"
          >
            <div
              class="dropdownItemLabel"
            >
              <span
                class="info"
              />
              <span
                class="action"
              >
                <span
                  class="dropdownButton"
                  id="add-other-intent-1"
                >
                  <i
                    class="icon material-icons"
                  >
                    add
                  </i>
                </span>
              </span>
              <span
                class="label"
              >
                Other/intent
              </span>
            </div>
            <div
              class="description"
              title="other intent description"
            >
              other intent description
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<IntentsFeedback /> Further curation should remove an intent on click remove 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      id="intent-tooltip-1"
    />
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="toggleMenu btn btn-secondary"
        type="button"
      >
        <span
          class="mr-1 menuLabel"
        >
          No intents detected
        </span>
        <span
          class="caret material-icons"
        >
          arrow_drop_down
        </span>
      </button>
      <div
        aria-hidden="true"
        class="menu dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <div
          class="header"
        >
          Message intents
          <i
            class="material-icons ml-2 info"
            id="intent-info-1"
          >
            info_outline
          </i>
        </div>
        <div
          class="options"
        >
          <h6
            class="subheader dropdown-header"
            tabindex="-1"
          >
            No intents detected
          </h6>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <h6
            class="subheader dropdown-header"
            tabindex="-1"
          >
            Other intents
          </h6>
          <div
            class="dropdownItemWrapper hoverable"
          >
            <div
              class="dropdownItemLabel"
            >
              <span
                class="info"
              />
              <span
                class="action"
              >
                <span
                  class="dropdownButton"
                  id="add-foo-intent-1"
                >
                  <i
                    class="icon material-icons"
                  >
                    add
                  </i>
                </span>
              </span>
              <span
                class="label"
              >
                Foo/intent
              </span>
            </div>
            <div
              class="description"
              title="foo intent description"
            >
              foo intent description
            </div>
          </div>
          <div
            class="dropdownItemWrapper hoverable"
          >
            <div
              class="dropdownItemLabel"
            >
              <span
                class="info"
              />
              <span
                class="action"
              >
                <span
                  class="dropdownButton"
                  id="add-bar-intent-1"
                >
                  <i
                    class="icon material-icons"
                  >
                    add
                  </i>
                </span>
              </span>
              <span
                class="label"
              >
                Bar/intent
              </span>
            </div>
            <div
              class="description"
              title="bar intent description"
            >
              bar intent description
            </div>
          </div>
          <div
            class="dropdownItemWrapper hoverable"
          >
            <div
              class="dropdownItemLabel"
            >
              <span
                class="info"
              />
              <span
                class="action"
              >
                <span
                  class="dropdownButton"
                  id="add-baz-intent-1"
                >
                  <i
                    class="icon material-icons"
                  >
                    add
                  </i>
                </span>
              </span>
              <span
                class="label"
              >
                Baz/intent
              </span>
            </div>
            <div
              class="description"
              title="baz intent description"
            >
              baz intent description
            </div>
          </div>
          <div
            class="dropdownItemWrapper hoverable"
          >
            <div
              class="dropdownItemLabel"
            >
              <span
                class="info"
              />
              <span
                class="action"
              >
                <span
                  class="dropdownButton"
                  id="add-other-intent-1"
                >
                  <i
                    class="icon material-icons"
                  >
                    add
                  </i>
                </span>
              </span>
              <span
                class="label"
              >
                Other/intent
              </span>
            </div>
            <div
              class="description"
              title="other intent description"
            >
              other intent description
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<IntentsFeedback /> Further curation should render active and available intents 1`] = `
<div
  class="wrapper"
>
  <div
    id="intent-tooltip-1"
  />
  <div
    class="dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="toggleMenu btn btn-secondary"
      type="button"
    >
      <span
        class="mr-1 menuLabel"
      >
        foo/intent
      </span>
      <span
        class="caret material-icons"
      >
        arrow_drop_down
      </span>
    </button>
    <div
      aria-hidden="true"
      class="menu dropdown-menu dropdown-menu-right"
      role="menu"
      tabindex="-1"
    >
      <div
        class="header"
      >
        Message intents
        <i
          class="material-icons ml-2 info"
          id="intent-info-1"
        >
          info_outline
        </i>
      </div>
      <div
        class="options"
      >
        <h6
          class="subheader dropdown-header"
          tabindex="-1"
        >
          foo/intent
        </h6>
        <div
          class="dropdownItemWrapper"
        >
          <div
            class="dropdownItemLabel"
          >
            <span
              class="info"
            >
              <i
                class="material-icons mr-2 confirmedInfo"
                id="foo-intent-1-info"
              >
                check_circle_outline
              </i>
            </span>
            <span
              class="action"
            >
              <span
                class="dropdownButton"
              >
                <i
                  class="reject icon material-icons"
                >
                  close
                </i>
              </span>
            </span>
            <span
              class="label"
            >
              Foo/intent
            </span>
          </div>
          <div
            class="description"
            title="foo intent description"
          >
            foo intent description
          </div>
        </div>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <h6
          class="subheader dropdown-header"
          tabindex="-1"
        >
          Other intents
        </h6>
        <div
          class="dropdownItemWrapper hoverable"
        >
          <div
            class="dropdownItemLabel"
          >
            <span
              class="info"
            />
            <span
              class="action"
            >
              <span
                class="dropdownButton"
                id="add-bar-intent-1"
              >
                <i
                  class="icon material-icons"
                >
                  add
                </i>
              </span>
            </span>
            <span
              class="label"
            >
              Bar/intent
            </span>
          </div>
          <div
            class="description"
            title="bar intent description"
          >
            bar intent description
          </div>
        </div>
        <div
          class="dropdownItemWrapper hoverable"
        >
          <div
            class="dropdownItemLabel"
          >
            <span
              class="info"
            />
            <span
              class="action"
            >
              <span
                class="dropdownButton"
                id="add-baz-intent-1"
              >
                <i
                  class="icon material-icons"
                >
                  add
                </i>
              </span>
            </span>
            <span
              class="label"
            >
              Baz/intent
            </span>
          </div>
          <div
            class="description"
            title="baz intent description"
          >
            baz intent description
          </div>
        </div>
        <div
          class="dropdownItemWrapper hoverable"
        >
          <div
            class="dropdownItemLabel"
          >
            <span
              class="info"
            />
            <span
              class="action"
            >
              <span
                class="dropdownButton"
                id="add-other-intent-1"
              >
                <i
                  class="icon material-icons"
                >
                  add
                </i>
              </span>
            </span>
            <span
              class="label"
            >
              Other/intent
            </span>
          </div>
          <div
            class="description"
            title="other intent description"
          >
            other intent description
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<IntentsFeedback /> Further curation should send the unsaved intents to the backend on dropdown toggle 1`] = `
Array [
  Array [
    "/api/tickets/0/messages/1/intents/",
    Object {
      "active_intents": Array [
        "bar/intent",
        "foo/intent",
      ],
    },
  ],
]
`;

exports[`<IntentsFeedback /> Segment tracking should send event on curation 1`] = `
Array [
  Array [
    "intent-feedback-user-submission",
    Object {
      "account_domain": "acme",
      "is_first_curation": true,
      "message_id": 1,
      "next_state": Array [
        "foo/intent",
        "bar/intent",
        "baz/intent",
      ],
      "previous_state": Array [
        "foo/intent",
        "bar/intent",
        "baz/intent",
      ],
      "sub_events": Array [
        Object {
          "event_type": "confirm-intent",
          "intent": "foo/intent",
        },
        Object {
          "event_type": "remove-intent",
          "intent": "foo/intent",
        },
      ],
      "ticket_id": undefined,
      "user_id": 2,
    },
  ],
]
`;

exports[`<IntentsFeedback /> Segment tracking should send event on menu toggle 1`] = `
Array [
  Array [
    "intent-feedback-dropdown-open",
    Object {
      "account_domain": "acme",
      "message_id": 1,
      "ticket_id": undefined,
      "user_id": 2,
    },
  ],
]
`;
